--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -9,7 +9,7 @@ type: article
 
 <div class="layout--article">
 
-  <div class="article__content" itemprop="articleBody">{{ content }}</div>
+  <div class="article__content" itemprop="articleBody">{{ content|truncatechars:120 }}</div>
 
   <footer class="article__footer">
     {%- if page.modify_date -%}
